feature: cambios para el cliente
