# src/categories/router.js
@@ -1,5 +1,6 @@
 const { Router } = require("express");
 const isAuthenticatedMiddleware = require("../auth/middlewares/isAuthenticated");
+const getCategoriesController = require("./controllers/getCategories");
 const createCategoryController = require("./controllers/createCategory");
 const editCategoryController = require("./controllers/editCategory");
 const removeCategoryController = require("./controllers/removeCategory");
@@ -8,6 +9,7 @@ const router = new Router();
 
 router.use(isAuthenticatedMiddleware);
 
+router.get("/", getCategoriesController);
 router.post("/", createCategoryController);
 router.put("/:categoryId", editCategoryController);
 router.delete("/:categoryId", removeCategoryController);
