# src/notes/router.js
@@ -16,6 +16,6 @@ router.get("/share/:noteId", getPublicNoteController);
 router.get("/:noteId", isAuthenticatedMiddleware, getNoteByIdController);
 router.put("/:noteId", isAuthenticatedMiddleware, editNoteController);
 router.delete("/:noteId", isAuthenticatedMiddleware, removeNoteController);
-router.post("/:noteId/upload-image", isAuthenticatedMiddleware, uploadNoteImageController);
+router.post("/upload-image", isAuthenticatedMiddleware, uploadNoteImageController);
 
 module.exports = router;
